--- a/config.ini
+++ b/config.ini
@@ -13,7 +13,7 @@
 ; 注释：只支持填写北京哦
 出校目的地: 北京
 
-出校行动轨迹: 燕园东门/东南门 - 万柳校区
+出校行动轨迹: 万柳
 
 [in]
 
@@ -23,7 +23,7 @@
 ; 注释：目前只支持填写海淀区，会尽快修复
 居住地所在区: 海淀区
 
-居住地所在街道: 燕园街道
+居住地所在街道: 万柳
 
 [capture]
 
